tests/errors/_questions/generated_errors/printf_unknown_format_placeholder/test.c
void main() 
{
    int x = 0;
    printf("%d", x);
}
